[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/ButtonTheme.tres" type="Theme" id=2]
[ext_resource path="res://StorySystem/StoryScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/CheapInkTitle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/MomTypewriter36.tres" type="DynamicFont" id=5]
[ext_resource path="res://Audio/Music/LOOP_intro_FINAL.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Music/progressive_intro_FINAL_02.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/SFX/menu_sfx_01_test.wav" type="AudioStream" id=8]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
buttonSfx = ExtResource( 8 )
introMenuMusic = ExtResource( 7 )
mainMenuMusic = ExtResource( 6 )
music_loop_method = 1
storyScene = ExtResource( 3 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentSafeZone" type="Control" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteSavePopup" type="ConfirmationDialog" parent="ContentSafeZone"]
anchor_left = 0.25
anchor_top = 0.35
anchor_right = 0.75
anchor_bottom = 0.65
window_title = "Delete Save Game?"
dialog_text = "Do you really want to delete your saved progress?
(This action cannot be undone)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ContentSafeZone"]
anchor_left = 0.33
anchor_right = 0.66
anchor_bottom = 0.25
custom_fonts/font = ExtResource( 4 )
text = "Some Printer Pun Title"
align = 1
valign = 1

[node name="Menu buttons" type="HBoxContainer" parent="ContentSafeZone"]
anchor_left = 0.1
anchor_top = 0.95
anchor_right = 0.9
anchor_bottom = 1.0
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="ContentSafeZone/Menu buttons"]
margin_left = 182.0
margin_right = 277.0
margin_bottom = 30.0
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Continue"

[node name="New" type="Button" parent="ContentSafeZone/Menu buttons"]
margin_left = 302.0
margin_right = 397.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "New Game"

[node name="Quit" type="Button" parent="ContentSafeZone/Menu buttons"]
margin_left = 422.0
margin_right = 473.0
margin_bottom = 30.0
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Quit"
[connection signal="confirmed" from="ContentSafeZone/DeleteSavePopup" to="." method="_on_DeleteSavePopup_confirmed"]
[connection signal="popup_hide" from="ContentSafeZone/DeleteSavePopup" to="." method="_on_DeleteSavePopup_popup_hide"]
[connection signal="pressed" from="ContentSafeZone/Menu buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="ContentSafeZone/Menu buttons/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="ContentSafeZone/Menu buttons/Quit" to="." method="_on_Quit_pressed"]
